Fix horizontal scrolling issue on mobile safari

--- a/app/assets/stylesheets/components/container.scss
+++ b/app/assets/stylesheets/components/container.scss
@@ -31,6 +31,7 @@
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
+    overflow-x: hidden;
 
     @media (min-width: 768px) {
       width: 750px;
